modules/k8s/env/pro/ap071/ap071-namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "ap071",
    "labels": {
      "name": "ap071"
    }
  }
}
