modules/k8s/env/pro/ap071/ap071-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ap071-ingress
  namespace: ap071
spec:
  defaultBackend:
    service:
      name: ap071-service
      port:
        number: 8080
  rules:
  - host: $USER.$domain_intra_ba
    http:
      paths:
      - backend:
          service:
            name: ap071-service
            port:
              number: 8080
        path: /piu/wellcome.html
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.16.202.20
    - ip: 172.16.202.21
    - ip: 172.16.202.22
    - ip: 172.16.202.23
